# ooo_foxtrot

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
hermes/: Makefile  README.md  hermes.cpp  main  main.cpp
hermes/inc/: hermes.h  hermes_test.h
hermes/inc/util/: features.h  state_info.h  stats.h  weight_array.h
hermes/util/: feat_hash.cpp  initial.cpp  misc.cpp  stats.cpp
scripts/: README.md  change_bin.py  compile_program.sh  create_zero_mem.py  linker_script.ld
src/: cpu.sv  example.sv  fed_stage.sv  fifo.sv  inst_decoder.sv  inst_router.sv  issue_queue.sv  issue_queue_if.sv  prf.sv  rename.sv  rename_stage.sv  rob.sv
src/functional_units/: bitmask_decoder.sv  fu_arith.sv  fu_dpi.sv  fu_if.sv  fu_logical.sv  fu_lsu.sv  lsu.sv
src/fuq_wrap/: arith_fuq_wrap.sv  dpi_fuq_wrap.sv  logical_fuq_wrap.sv  lsu_fuq_wrap.sv
testbenches/: cpu.cpp  example.cpp  fed_stage.cpp  fifo.cpp  fu_logical.cpp  fu_lsu.cpp  inst_decoder.cpp  rename.cpp
testbenches/support/: fu_test.h  memory.cpp  memory.h
testbenches/wrap/: README.md  fu_arith_wrap.sv  fu_logical_wrap.sv  fu_lsu_wrap.sv
testcases/: README.md
testcases/add_reduce/: add_reduce.S  prog.elf
testcases/example/: README.md  example.S  mem_cmp.txt  prog.elf
testcases/fu_arith/: fu_arith.S  prog.elf
testcases/fu_dpi/: fu_dpi.S  prog.elf
testcases/fu_logical/: README.md  fu_logical.S  prog.elf
testcases/fu_lsu/: fu_lsu.S  prog.elf
testcases/inst_decoder/: inst_decoder.S  prog.elf
